# conference-rs

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: dev.yml  main.yml  prod.yml
deploy/: values-dev.yaml
deploy/templates/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
server/: .dockerignore  .env.dev  Cargo.toml
server/src/: main.rs
server/src/config/: mod.rs
server/src/handler/web_socket/: collaborate.rs  meet.rs  mod.rs
server/src/message/: client.rs  internal.rs  mod.rs  server.rs
server/src/registry/: mod.rs
server/src/registry/room/: broadcast.rs  handler.rs  id.rs  inner.rs  mod.rs  subscription.rs  weak.rs
server/src/registry/room/collaborator/: mod.rs
server/src/registry/room/participant/: connection.rs  interpret.rs  mod.rs  subscribe.rs
server/src/types/: mod.rs
server/src/utils/: mod.rs
server/static/: index.html
server/static/assets/: styles.css
server/tests/: test.rs
ui/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: Button.tsx
ui/src/config/: config.ts  store.ts  useMeetingNotesStore.ts  useRoomStateStore.ts
ui/src/hooks/: useLocalStorage.ts  useWIndowSize.tsx
ui/src/hooks/useRoom/: types.ts  useActiveSpeaker.ts  useCollaborate.ts  useEmojiStore.ts  useIsAudioOnly.ts  useJoinRoom.ts  useOnActionBroadcast.ts  useShareScreen.ts  useStore.ts
ui/src/lib/MediasoupClient/: OwnParticipant.ts  Participant.ts  (+5 more)
ui/src/pages/: NotFound.tsx
ui/types/: twin.d.ts
(+26 files in other folders)
